# minagent

./: .gitignore  LICENSE  README.md  pyproject.toml
src/minagent/: agent.py
